fix: remove text-align:left to fix rtl obedience (#87)

--- a/porches/generic/site/css/main.css
+++ b/porches/generic/site/css/main.css
@@ -7,6 +7,7 @@ body {
   font-weight: 300;
   background: #fff;
   overflow-x: hidden;
+  text-align: unset;
 }
 a:hover,
 a:focus {
